# Iter

./: .gitignore  LICENSE  README.md  config.json.example  pyproject.toml  requirements_dev.txt  requirements_prod.txt  secrets.json.example
Presets/: Condenser (paragraph) + Check.json  Condenser (section) + Check.json  Quick Condenser (paragraph).json  Quick Condenser (section).json  Quick Translate to en-US.json  Quick Translate to it-IT.json  Refine English text.json  Translate to en-US + Preflight.json  Translate to it-IT + Preflight.json  _empty.json  condensation.json  empty.json
Windows Integration/: generate_registry_files.ps1
itertool/: __init__.py  __main__.py  config.py  logger.py  markdown_utils.py  mcp_tools.py  models.py  processor.py
itertool/gui/: __init__.py  app.py
