[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itertool"
version = "0.1.1"
description = "Iter - Iterative node-based document processor."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kuig", email = "kuig.music@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "streamlit",
    "unified-ai-client",
]
keywords = ["markdown", "ai", "mcp", "streamlit", "document-processing", "prompt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Kuig/Iter"
Repository = "https://github.com/Kuig/Iter"
"Bug Tracker" = "https://github.com/Kuig/Iter/issues"

[project.scripts]
iter = "itertool.__main__:main"

[tool.setuptools.packages.find]
include = ["itertool*"]
